# sdl2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp
06_extension_libraries_and_loading_other_image_formats/: 06_extension_libraries_and_loading_other_image_formats.cpp
assets/shaders/: fps_counter.frag  image.frag  image.vert  triangle.frag
include/: app.h  config.h  fps_counter.h  image.h  triangle.h
include/core/: context.h
include/util/: game_object.h  loader.h  time.h  vector.h
src/: App.cpp  app.cpp  basic_test.cpp  fps_counter.cpp  image.cpp  main.rs  opengl_surface.cpp  render_ttf.cpp  show_image.cpp  triangle.cpp
src/core/: context.cpp  main.cpp
src/util/: loader.cpp  time.cpp
